--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="container">
     <div class="to-do-app">
-        <h2>To-Do List <img class="icon" src="wp6439435.jpg"></h2>
+        <div class="head"><h2>To-Do List </h2>
+            <p class="date"></p></div>
         <div class="row">
             <input type="text" name="" id="input-box" placeholder="Add your task..">
             <button onclick="addTask()">ADD</button>
